exports[`test it displays "active" link as selected when the filter is set to "active" given. 1`] = `
<footer
  className="footer">
  <span
    className="todo-count">
    <strong />
     item left
  </span>
  <ul
    className="filters">
    <li>
      <a
        className={undefined}
        onClick={[Function]}
        style={Object {}}>
        All
      </a>
    </li>
    <li>
      <a
        className={undefined}
        onClick={[Function]}
        style={Object {}}>
        Active
      </a>
    </li>
    <li>
      <a
        className={undefined}
        onClick={[Function]}
        style={Object {}}>
        Completed
      </a>
    </li>
  </ul>
  <button
    className="clear-completed"
    onClick={undefined}>
    Clear completed
  </button>
</footer>
`;

exports[`test it displays "all" link as selected when not filter is given. 1`] = `
<footer
  className="footer">
  <span
    className="todo-count">
    <strong />
     item left
  </span>
  <ul
    className="filters">
    <li>
      <a
        className={undefined}
        onClick={[Function]}
        style={Object {}}>
        All
      </a>
    </li>
    <li>
      <a
        className={undefined}
        onClick={[Function]}
        style={Object {}}>
        Active
      </a>
    </li>
    <li>
      <a
        className={undefined}
        onClick={[Function]}
        style={Object {}}>
        Completed
      </a>
    </li>
  </ul>
  <button
    className="clear-completed"
    onClick={undefined}>
    Clear completed
  </button>
</footer>
`;

exports[`test it displays "completed" link as selected when the filter is set to "completed" given. 1`] = `
<footer
  className="footer">
  <span
    className="todo-count">
    <strong />
     item left
  </span>
  <ul
    className="filters">
    <li>
      <a
        className={undefined}
        onClick={[Function]}
        style={Object {}}>
        All
      </a>
    </li>
    <li>
      <a
        className={undefined}
        onClick={[Function]}
        style={Object {}}>
        Active
      </a>
    </li>
    <li>
      <a
        className={undefined}
        onClick={[Function]}
        style={Object {}}>
        Completed
      </a>
    </li>
  </ul>
  <button
    className="clear-completed"
    onClick={undefined}>
    Clear completed
  </button>
</footer>
`;

exports[`test it displays the given number of remaining items. 1`] = `
<footer
  className="footer">
  <span
    className="todo-count">
    <strong>
      3
    </strong>
     item left
  </span>
  <ul
    className="filters">
    <li>
      <a
        className={undefined}
        onClick={[Function]}
        style={Object {}}>
        All
      </a>
    </li>
    <li>
      <a
        className={undefined}
        onClick={[Function]}
        style={Object {}}>
        Active
      </a>
    </li>
    <li>
      <a
        className={undefined}
        onClick={[Function]}
        style={Object {}}>
        Completed
      </a>
    </li>
  </ul>
  <button
    className="clear-completed"
    onClick={undefined}>
    Clear completed
  </button>
</footer>
`;
